--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,7 +110,7 @@
                 android:id="@+id/img_photo"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:background="@drawable/mtk"
+                android:background="@drawable/bgcard"
                 android:scaleType="centerCrop"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -120,7 +120,7 @@
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 android:textSize="25sp"
                 android:textStyle="bold"
@@ -132,7 +132,7 @@
                 android:id="@+id/tv_topik"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 android:ellipsize="end"
                 android:maxLines="5"
@@ -150,7 +150,7 @@
                 android:id="@+id/tv_tanggal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 android:text="@string/tanggal"
                 android:textSize="15sp"
