--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".ui.notifications.NotificationsFragment">
 
     <LinearLayout
@@ -217,12 +218,13 @@
             android:id="@+id/tambahsoal"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:backgroundTint="@android:color/transparent"
+            android:background="@null"
             android:contentDescription="@string/tambah_soal_desc"
             android:src="@drawable/_904677_add"
             android:translationY="0dp"
             app:layout_constraintBottom_toBottomOf="@id/soal_container"
             app:layout_constraintEnd_toEndOf="@id/soal_container" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
