--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -136,30 +136,39 @@
             android:layout_marginBottom="32dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/rounded_corner"
-            android:clipChildren="false"
-            android:clipToPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageButton
+                android:id="@+id/iconTrash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:src="@drawable/_666703_trash_icon"
+                android:background="@android:color/transparent"
+                android:contentDescription="Hapus"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
 
             <TextView
                 android:id="@+id/pertanyaan"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
+                android:layout_margin="16dp"
                 android:text="@string/pertanyaan"
+                android:textColor="@color/blue"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/blue"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="16dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iconTrash" />
 
             <ImageView
                 android:id="@+id/gambar_soal"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="140dp"
                 android:layout_marginHorizontal="16dp"
                 android:scaleType="fitCenter"
                 android:contentDescription="@string/gambar"
@@ -174,7 +183,6 @@
                 android:paddingHorizontal="10dp"
                 android:orientation="vertical"
                 android:layout_margin="16dp"
-                android:layout_marginBottom="30dp"
                 app:layout_constraintTop_toBottomOf="@id/gambar_soal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
